# abctools

./: ODbL.txt  README.md  abc-chord-matcher.js  abc_tools_version.json  abcjs-audio.css  abcjs-basic-eskin-min.js  abcjs-basic-eskin.js  abcjs-basic-tabs-min.js  abcjs-basic-tabs.js  abcjs-basic.js  abcjs-chord-intervals.js  abctools-offline.html  abctools-quick-editor-offline.html  abctools-quick-editor.html  abctools.html  api-keys.js  app-min.css  app-min.js  app-quick-editor-min.js  app-quick-editor.js  app.css  app.js  base2048.js  bww2abc.js  codemirror-min.css  codemirror-min.js  codemirror.css  context-menu.js  credits.html  database.js  daypilot-modal.min-3.10.1.js  donate.html  download-reverb.js  fix-offline.html  guided-tour.js  instructions.html  manage_database.js  ocarolan.html  online-check.js  pdf-website-import.js  (+19 more)
abctools_beta_1_cm/: LICENSE  abc_tools_version.json  abcjs-basic-eskin-min.js  abcjs-basic-eskin.js  abctools-quick-editor.html  abctools.html  always-online.js  app-min.js  app.css  app.js  bww2abc.js  codemirror.css  context-menu.js  database.js  online-check.js  pdf-lib-min.js  pdf-website-import.js  smartdraw-export-min.js  smartdraw-export.js  tab-injectors-min.js  tab-injectors.js  uninstall.html  userguide.html  website_generator.js  xml2abc-min.js
abctools_pwa/: README.md  abcjs-basic-eskin-min.js  abcjs-basic-eskin.js  abcjs-chord-intervals.js  abctools-offline.html  abctools.html  api-keys.js  app-min.js  app.css  app.js  database.js  fix-offline.html  manage_database.js  online-check.js  qrcode.js  service_worker.js  smartdraw-export.js  tab-injectors-min.js  tab-injectors.js  userguide.html  xml2abc.js
app/: abcjs-basic-eskin-min.js  abcjs-basic-eskin.js  abctools-offline.html  abctools.html  app-min.js  app.css  app.js  bww2abc.js  context-menu.js  credits.html  fix-offline.html  manage_database.js  service_worker.js  tunesources.css  tunesources.html  tunesources.js  userguide.html
cce_sd/: all_tunes.js  tunes.css  tunes.html  tunes.js
img/: abc-browserconfig.xml  abc-manifest-qe.json  abc-manifest.json  images.txt
python/: flask_app.py  pyparsing.py
tools/: OpenInABCTranscriptionTools.scpt  OpenInChordSolver.scpt  OpenInWebsiteBuilder.scpt  abc-chord-chart-guided-tour.js  abc-search-engine.css  abc-search-engine.html  abc-search-engine.js  abc2csv.css  abc2csv.html  (+93 more)
tools/celtic-sounds-vst/: .gitignore  CMakeLists.txt  README.md
tools/celtic-sounds-vst/scripts/: build-tests.ps1  build.ps1  configure.bat  configure2.bat  generate_registry.py  prepare_samples.py
tools/celtic-sounds-vst/source/: DroneEngine.cpp  DroneEngine.h  ExpressionMapper.cpp  ExpressionMapper.h  InstrumentConfig.cpp  InstrumentConfig.h  MidiRouter.cpp  MidiRouter.h  NoteMap.cpp  NoteMap.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SampleRegistry.cpp  SampleRegistry.h  SamplerEngine.cpp  SamplerEngine.h
tools/celtic-sounds-vst/tests/: ExpressionMapperTest.cpp  InstrumentConfigTest.cpp  MidiRouterTest.cpp  NoteMapTest.cpp
(+58 files in other folders)
